refactor collection manupulation from Guava to Java Stream and Collection API
This commit only affected (part of) killbill-util module. Related issue: https://github.com/killbill/killbill/issues/1615