@@ -22,14 +22,16 @@ import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
+import java.util.Objects;
 import java.util.Set;
+import java.util.stream.Collectors;
 
-import javax.annotation.Nullable;
 import javax.inject.Inject;
 
 import org.apache.shiro.SecurityUtils;
@@ -56,15 +58,7 @@ import org.killbill.billing.util.security.shiro.realm.KillBillJdbcRealm;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import com.google.common.base.Function;
-import com.google.common.base.Functions;
-import com.google.common.base.Predicate;
-import com.google.common.base.Predicates;
 import com.google.common.base.Strings;
-import com.google.common.collect.Collections2;
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.Iterables;
-import com.google.common.collect.Lists;
 
 public class DefaultSecurityApi implements SecurityApi {
 
@@ -134,7 +128,7 @@ public class DefaultSecurityApi implements SecurityApi {
     public Set<String> getCurrentUserPermissions(final TenantContext context) {
         final Subject subject = SecurityUtils.getSubject();
 
-        final Set<String> allPermissions = new HashSet<String>();
+        final Set<String> allPermissions = new HashSet<>();
         for (final Entry<Realm, Method> realmAndMethod : getAuthorizationInfoMethods.entrySet()) {
             try {
                 final AuthorizationInfo authorizationInfo = (AuthorizationInfo) realmAndMethod.getValue().invoke(realmAndMethod.getKey(), subject.getPrincipals());
@@ -181,7 +175,7 @@ public class DefaultSecurityApi implements SecurityApi {
 
     @Override
     public void checkCurrentUserPermissions(final List<Permission> permissions, final Logical logical, final TenantContext context) throws SecurityApiException {
-        final String[] permissionsString = Lists.<Permission, String>transform(permissions, Functions.toStringFunction()).toArray(new String[permissions.size()]);
+        final String[] permissionsString = permissions.stream().map(Permission::toString).toArray(String[]::new);
 
         try {
             final Subject subject = SecurityUtils.getSubject();
@@ -233,14 +227,7 @@ public class DefaultSecurityApi implements SecurityApi {
 
     @Override
     public List<String> getUserRoles(final String username, final TenantContext tenantContext) throws SecurityApiException {
-        final List<UserRolesModelDao> permissionsModelDao = userDao.getUserRoles(username);
-        return ImmutableList.copyOf(Iterables.transform(permissionsModelDao, new Function<UserRolesModelDao, String>() {
-            @Nullable
-            @Override
-            public String apply(final UserRolesModelDao input) {
-                return input.getRoleName();
-            }
-        }));
+        return userDao.getUserRoles(username).stream().map(UserRolesModelDao::getRoleName).collect(Collectors.toList());
     }
 
     @Override
@@ -257,34 +244,22 @@ public class DefaultSecurityApi implements SecurityApi {
 
     @Override
     public List<String> getRoleDefinition(final String role, final TenantContext tenantContext) {
-        final List<RolesPermissionsModelDao> permissionsModelDao = userDao.getRoleDefinition(role);
-        return ImmutableList.copyOf(Iterables.transform(permissionsModelDao, new Function<RolesPermissionsModelDao, String>() {
-            @Nullable
-            @Override
-            public String apply(final RolesPermissionsModelDao input) {
-                return input.getPermission();
-            }
-        }));
+        return userDao.getRoleDefinition(role).stream().map(RolesPermissionsModelDao::getPermission).collect(Collectors.toList());
     }
 
     private List<String> sanitizePermissions(final List<String> permissionsRaw) throws SecurityApiException {
         if (permissionsRaw == null) {
-            return ImmutableList.<String>of();
+            return Collections.emptyList();
         }
+        final Collection<String> permissions = permissionsRaw.stream()
+                .filter(Objects::nonNull)
+                .map(Strings::emptyToNull)
+                .collect(Collectors.toList());
 
-        final Collection<String> permissions = Collections2.<String>filter(Lists.<String, String>transform(permissionsRaw,
-                                                                                                           new Function<String, String>() {
-                                                                                                               @Override
-                                                                                                               public String apply(final String input) {
-                                                                                                                   return Strings.emptyToNull(input);
-                                                                                                               }
-                                                                                                           }),
-                                                                           Predicates.<String>notNull());
-
-        final Map<String, Set<String>> groupToValues = new HashMap<String, Set<String>>();
+        final Map<String, Set<String>> groupToValues = new HashMap<>();
         for (final String curPerm : permissions) {
             if ("*".equals(curPerm)) {
-                return ImmutableList.of("*");
+                return List.of("*");
             }
 
             final String[] permissionParts = curPerm.split(":");
@@ -305,7 +280,7 @@ public class DefaultSecurityApi implements SecurityApi {
             }
         }
 
-        final List<String> expandedPermissions = new ArrayList<String>();
+        final List<String> expandedPermissions = new ArrayList<>();
         for (final String group : groupToValues.keySet()) {
             final Set<String> groupPermissions = groupToValues.get(group);
             for (final String value : groupPermissions) {
@@ -317,12 +292,10 @@ public class DefaultSecurityApi implements SecurityApi {
 
     private void invalidateJDBCAuthorizationCache(final String username) {
         final Collection<Realm> realms = ((DefaultSecurityManager) SecurityUtils.getSecurityManager()).getRealms();
-        final KillBillJdbcRealm killBillJdbcRealm = (KillBillJdbcRealm) Iterables.tryFind(realms, new Predicate<Realm>() {
-            @Override
-            public boolean apply(@Nullable final Realm input) {
-                return (input instanceof KillBillJdbcRealm);
-            }
-        }).orNull();
+        final KillBillJdbcRealm killBillJdbcRealm = (KillBillJdbcRealm) realms.stream()
+                .filter(realm -> (realm instanceof KillBillJdbcRealm))
+                .findFirst()
+                .orElse(null);
 
         if (killBillJdbcRealm != null) {
             final SimplePrincipalCollection principals = new SimplePrincipalCollection();
